--- a/companies-app/.github/workflows/deploy.yml
+++ b/companies-app/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ permissions:
 # Avoid multiple concurrent deployments
 concurrency:
   group: 'pages'
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 jobs:
   deploy:
