--- a/companies-app/package.json
+++ b/companies-app/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "axios": "^1.12.2",
     "vue": "^3.5.21",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-toastification": "^2.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
