--- a/companies-app/package.json
+++ b/companies-app/package.json
@@ -12,7 +12,7 @@
     "axios": "^1.12.2",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1",
-    "vue-toastification": "1.7.14"
+    "vue-toastification": "2.0.0-rc.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
